--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
+      env: 
+        API_KEY: ${{ secrets.API_KEY }}
       with:
         python-version: "3.6"
     - name: Install dependencies
